// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> create buttons 1`] = `
<button
  className="fd-button"
  type="button"
>
  Regular Button
</button>
`;

exports[`<Button /> create buttons 2`] = `
<button
  className="fd-button fd-button--emphasized"
  type="button"
>
  Emphasized Button
</button>
`;

exports[`<Button /> create buttons 3`] = `
<button
  className="fd-button fd-button--positive"
  type="button"
>
  Positive Button
</button>
`;

exports[`<Button /> create buttons 4`] = `
<button
  className="fd-button sap-icon--cart"
  type="button"
>
  Icon Button
</button>
`;

exports[`<Button /> create buttons 5`] = `
<button
  className="fd-button fd-button--compact"
  type="button"
>
  Compact
</button>
`;

exports[`<Button /> create buttons 6`] = `
<button
  className="fd-button fd-button--emphasized is-selected"
  selected={true}
  type="button"
>
  Selected State
</button>
`;

exports[`<Button /> create buttons 7`] = `
<button
  className="fd-button fd-button--emphasized is-disabled"
  disabled={true}
  type="button"
>
  Disabled State
</button>
`;
